edits for issue #1 code+docs and shared scripts
